@startuml

title __BUBBLE's Class Diagram__\n

  namespace com.protocols {
    namespace bubble {
      class com.protocols.bubble.Bubble {
          # drawRectBubbleIndicatorRule : double
          + Bubble()
          - drawRectBubbleLeftBaselineIndicator()
          - drawRectBubbleLeftCenterIndicator()
          - drawRectBubbleRightBaselineIndicator()
          - drawRectBubbleRightCenterIndicator()
          - drawRectBubbleToplineIndicator()
      }
    }
  }
  

  namespace com.protocols {
    namespace bubble {
      enum BubbleSpec {
        FACE_BOTTOM
        FACE_LEFT_BOTTOM
        FACE_LEFT_CENTER
        FACE_RIGHT_BOTTOM
        FACE_RIGHT_CENTER
        FACE_TOP
      }
    }
  }
  

  namespace com.protocols {
    namespace bubble {
      class com.protocols.bubble.BubbledLabel {
          - pading : double
          - systemCall : boolean
          + BubbledLabel()
          + BubbledLabel()
          + BubbledLabel()
          + BubbledLabel()
          + BubbledLabel()
          + BubbledLabel()
          + getBubbleSpec()
          + getPading()
          + setBubbleSpec()
          + setPading()
          # updateBounds()
          - init()
          - shapeIt()
      }
    }
  }
  

  com.protocols.bubble.Bubble -up-|> javafx.scene.shape.Path
  com.protocols.bubble.BubbledLabel -up-|> javafx.scene.control.Label
  com.protocols.bubble.BubbledLabel o-- com.protocols.bubble.BubbleSpec : bs


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
